# auto-anything

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
examples/: README.md  bootstrap_from_request.py  bootstrap_invoice_task.py  invoice_extraction_quickstart.py  run_invoice_iteration.py  run_task_iteration.py
examples/sample_data/: sample_invoice.expected.json
src/auto_anything/: __init__.py  artificial_analysis_api.py  cli.py  compiler.py  data_slicing.py  diagnose.py  engine.py  execution.py  family_registry.py  history.py  interfaces.py  invoice_bootstrap.py  invoice_iteration.py  model_probe.py  model_selection.py  models.py  open_bootstrap.py  openrouter_api.py  request_bootstrap.py  scaffold.py  serialization.py  skills.py  task_docs.py  task_family.py  task_iteration.py  workspace.py
src/auto_anything/scaffolds/invoice_workspace/eval/: run_invoice_eval.py
src/auto_anything/scaffolds/invoice_workspace/src/invoice_pipeline/: document_io.py  extract.py  field_extractors.py  normalization.py  openrouter_client.py  schema.py
src/auto_anything/scaffolds/open_task_workspace/eval/: run_task_eval.py
src/auto_anything/scaffolds/open_task_workspace/src/task_pipeline/: __init__.py  data_ingestion.py  pipeline.py  postprocess.py
tests/: test_bootstrap.py  test_compiler.py  test_engine.py  test_execution.py  test_generic_primitives.py  test_history.py  test_invoice_iteration.py  test_model_apis.py  test_request_bootstrap.py  test_task_family.py  test_workspace.py
