[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-anything"
version = "0.1.0"
description = "Generic experiment harness for compiling high-level objectives into agent-optimizable tasks."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
auto-anything = "auto_anything.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

